Update Spring Boot, refactor code, and improve efficiency
Upgraded Spring Boot to version 4.0.1 for enhanced stability and fixes. Refactored code to improve readability, modularity, and the consistency of helper methods, reducing duplication. Also applied cleaner type annotations and enhanced test clarity by simplifying method signatures.